shimlang/test_scripts/errors/add_int_and_str.stderr
 1 | 1 + "test";
       ^
Error: Operation '+' not supported between Integer(1) and String(4, 0, u24([0, 0, 5]))
